--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /build
 /captures
-.externalNativeBuild
-*.iml
+
+.idea/
+!.idea/copyright/*.xml
+!.idea/codeStyleSettings.xml
+/Application/release/*
+
